--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         const interval = setInterval(() => {
             let theTime = new Date();
-            let theCurrentHour = theTime.getHours() + 12;
+            let theCurrentHour = theTime.getHours();
             let theCurrentMin = theTime.getMinutes();
             let theSeconds = theTime.getSeconds();
             console.log(theCurrentHour)
